src/testsuite/single/tests/compiler/fail/string_case.c
void foo() {
    switch ("hi") {
    case "foo".."bar":
    }
}
